<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AnimPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        style="@style/AnimPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/bg_progress_dialog"
        android:orientation="vertical">
        <View style="@style/horizontal_line_style" />

        <FrameLayout
            android:id="@+id/dig_layout_fm_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_progress_00"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/progress_00"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_progress_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_flag_01"
                android:visibility="invisible" />
        </FrameLayout>

        <View style="@style/horizontal_line_style" />

        <FrameLayout
            android:id="@+id/dig_layout_fm_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_progress_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_flag_01"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_progress_01"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/progress_01"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />
        </FrameLayout>

        <View style="@style/horizontal_line_style" />

        <FrameLayout
            android:id="@+id/dig_layout_fm_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_progress_02"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/progress_02"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_progress_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_flag_01"
                android:visibility="invisible" />
        </FrameLayout>

        <View style="@style/horizontal_line_style" />

        <FrameLayout
            android:id="@+id/dig_layout_fm_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_progress_03"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/progress_03"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_progress_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_flag_01"
                android:visibility="invisible" />
        </FrameLayout>

        <View style="@style/horizontal_line_style" />

        <FrameLayout
            android:id="@+id/dig_layout_fm_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_progress_04"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/progress_04"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_progress_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_flag_01"
                android:visibility="invisible" />
        </FrameLayout>

        <View style="@style/horizontal_line_style" />

        <FrameLayout
            android:id="@+id/dig_layout_fm_05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_progress_05"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/progress_05"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_progress_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_flag_01"
                android:visibility="invisible" />
        </FrameLayout>

        <View style="@style/horizontal_line_style" />

    </LinearLayout>

</LinearLayout>